--- a/src/opencv_demo/CMakeLists.txt
+++ b/src/opencv_demo/CMakeLists.txt
@@ -14,10 +14,17 @@ find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(OpenCV REQUIRED)
 
-add_executable(minimal_opencv_ros2_node src/minimal_opencv_ros2_node.cpp)
-ament_target_dependencies(minimal_opencv_ros2_node rclcpp std_msgs sensor_msgs cv_bridge image_transport OpenCV)
+#add_executable(minimal_opencv_ros2_node src/minimal_opencv_ros2_node.cpp)
+#ament_target_dependencies(minimal_opencv_ros2_node rclcpp std_msgs sensor_msgs cv_bridge image_transport OpenCV)
+#install(TARGETS
+#   minimal_opencv_ros2_node
+#   DESTINATION lib/${PROJECT_NAME}
+# )
+
+add_executable(plsWonk src/plsWonk.cpp)
+ament_target_dependencies(plsWonk rclcpp std_msgs sensor_msgs cv_bridge image_transport OpenCV)
 install(TARGETS
-   minimal_opencv_ros2_node
+   plsWonk
    DESTINATION lib/${PROJECT_NAME}
  )
 
