--- a/src/opencv_demo/CMakeLists.txt
+++ b/src/opencv_demo/CMakeLists.txt
@@ -39,6 +39,9 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
 
 ament_package()
